# lua-cryptsetup

./: CMakeLists.txt  README.asciidoc  cryptsetup.nobj.lua  lua-cryptsetup-scm-0.rockspec
src/: cryptdevice.nobj.lua  pre_generated-cryptsetup.nobj.c
test/: test.lua
